tests/build/cases/widget_new/unknown_special_value_in_when.stderr
error: unexpected token
 --> cases/widget_new/unknown_special_value_in_when.rs:8:25
  |
8 |             margin = foo!;
  |                         ^
