tests/build/cases/widget_new/unknown_special_value_in_when.rs
use zero_ui::prelude::*;

fn main() {
    let _scope = APP.minimal();
    let _ = Wgt! {
        margin = 0;
        when *#is_pressed {
            margin = foo!;
        }
    };
}
